# Self-Smart

./: .gitignore  Cargo.toml  README.md
src/: config.rs  error.rs  lib.rs  main.rs
src/agent/: loop_engine.rs  mod.rs  react.rs
src/git/: mod.rs  ops.rs
src/llm/: mod.rs  vllm.rs
src/tools/: analyze.rs  document.rs  generate.rs  mod.rs  refactor.rs  test.rs
